<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.flightdeck.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.example.flightdeck.ui.atc.ATCFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_atc" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.flightdeck.ui.weather.ATISFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_atis" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.flightdeck.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>